<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/primary">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_mr_maggot"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <ImageView
        android:id="@+id/btn_notif"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/notifikasi"
        android:src="@drawable/ic_notif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/card_sf"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/card_green"
        android:elevation="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.100000024">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/smart_feeder"
            android:src="@drawable/feeder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smart_feeder"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_suhu"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/card_choco"
        android:elevation="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_sf"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.100000024">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/cek_suhu"
            android:src="@drawable/suhu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cek_suhu"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_pengering"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/card_choco"
        android:elevation="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_sf"
        app:layout_constraintVertical_bias="0.100000024">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/pengering"
            android:src="@drawable/pengering" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pengering"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_about"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/card_green"
        android:elevation="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_sf"
        app:layout_constraintTop_toBottomOf="@+id/card_suhu"
        app:layout_constraintVertical_bias="0.100000024">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/about"
            android:src="@drawable/cacing" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/copyright_tgs_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>