<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CekSuhuActivity"
    android:background="@color/primary">

    <TextView
        android:id="@+id/ruang_budidaya"
        android:layout_width="280dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/card_green"
        android:elevation="20dp"
        android:gravity="center"
        android:text="@string/ruang_budidaya"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box_maggot"
        android:layout_width="280dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/card_green"
        android:elevation="20dp"
        android:gravity="center"
        android:text="@string/box_maggot_bsf"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ruang_budidaya" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/card_green"
        android:gravity="center"
        android:text="@string/suhu_description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_maggot" />

</androidx.constraintlayout.widget.ConstraintLayout>